--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://awesome-hugo.dev/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Awesome Hugo"
